lsp/tree-sitter-hera/test/corpus/tokens.txt
================================================================================
Comment
================================================================================

# a hera comment

--------------------------------------------------------------------------------

(program
  (newline)
  (comment)
  (newline))

================================================================================
Rule with string body
================================================================================

Greeting
  "hello"

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (string)
  (newline))

================================================================================
Rule with reference body
================================================================================

Start
  Greeting

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (identifier)
  (newline))

================================================================================
Choice operator vs regex literal
================================================================================

Foo
  A / B
  /abc/

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (identifier)
  (operator)
  (identifier)
  (newline)
  (regex)
  (newline))

================================================================================
Character class
================================================================================

Digit
  [0-9]+

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (character_class)
  (newline))

================================================================================
Inline handler content delegates to inline_handler_content
================================================================================

Rule
  Foo Bar :: MyType -> $1

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (identifier)
  (identifier)
  (type_marker)
  (identifier)
  (inline_handler
    (arrow)
    content: (inline_handler_content))
  (newline))

================================================================================
Multi-line handler body delegates to handler_content
================================================================================

Sum
  A B ->
    return $1 + $2

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (identifier)
  (identifier)
  (arrow)
  (handler_line
    content: (handler_content))
  (newline))

================================================================================
Outdent pops back to Hera grammar
================================================================================

Sum
  A B ->
    return 1
NextRule
  X

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (identifier)
  (identifier)
  (arrow)
  (handler_line
    content: (handler_content))
  (newline)
  (identifier)
  (newline)
  (identifier)
  (newline))

================================================================================
Code block exposes content
================================================================================

```
import { Foo } from './foo'
```

--------------------------------------------------------------------------------

(program
  (newline)
  (code_block
    content: (code_body))
  (newline))

================================================================================
Prefix and suffix operators
================================================================================

R
  $Foo &Bar !Baz Quux+ Q? Qx*

--------------------------------------------------------------------------------

(program
  (newline)
  (identifier)
  (newline)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (newline))
